--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,13 +1,17 @@
----
-import MainHead from "../components/MainHead.astro"
-
-
----
-
 <!DOCTYPE html>
 <html lang="en">
-  <MainHead />
-<body>
-  <slot />
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Astro</title>
+  </head>
+  <body>
+    <slot />
+  </body>
 </html>
+
+<style is:global>
+
+</style>
