--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,3 +1,8 @@
 ---
+import Layout from "../layouts/Layout.astro";
 ---
 
+<Layout title="Devin Jaggernauth" >
+	<h1 class=" text-5xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-blue-900">Hello world</h1>
+	<p class="font-body">This is a test of the new fonts</p>
+</Layout>
