--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,10 +17,11 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <div class="p-4">
+    <div class="p-4 bg-light bg-cover">
       <slot />
     </div>
   </body>
 </html>
 
-<style is:global></style>
+<style is:global>
+</style>
