--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -11,7 +11,7 @@ const navLinks = [
     <p class="font-sans font-semibold text-xl">Devin Jaggernauth</p>
   </a>
   <div class="w-1/6">
-    <ul class="flex justify-between">
+    <ul class="flex justify-around">
       {
         navLinks.map(({ name, url }) => (
           <li>
