--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,12 +4,12 @@
 <header class="flex justify-around items-center mt-10">
   <div class="w-96">
     <h1 class="text-6xl font-bold">
-      Hello world, my name is <span
-        class="bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-blue-900"
+      Hello, world! My name is <span
+        class="bg-clip-text text-transparent bg-gradient-to-r from-evenRed to-evenBlue"
         >Devin Jaggernauth</span
       >
     </h1>
-    <p class="font-body">This is a test of the new fonts</p>
+    <p class="my-10 font-normal text-xl text-zinc-600">I'm a Full Stack Engineer based in Trinidad & Tobago 🇹🇹.</p>
   </div>
   <img class="w-72 h-auto rounded-3xl"
     src="/assets/images/profile.jpg"
