--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 
 export interface Props {
@@ -21,6 +22,7 @@ const { title } = Astro.props;
       <slot />
     </div>
   </body>
+  <Footer />
 </html>
 
 <style is:global>
