update hero styles

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,8 +7,8 @@ const currentYear = new Date().getFullYear();
     <p>&copy; {currentYear} Devin Jaggernauth</p>
   </div>
   <p class="flex justify-between gap-4">
-    <a href="https://twitter.com/me"> Twitter</a>
-    <a href="https://github.com/me"> GitHub</a>
-    <a href="https://codepen.io/me"> CodePen</a>
+    <a href="https://twitter.com/mentalcaries" target="_blank" rel="noreferrer"> Twitter</a>
+    <a href="https://github.com/mentalcaries" target="_blank" rel="noreferrer"> GitHub</a>
+    <a href="https://linkedin.com/in/devin-jaggernauth" target="_blank" rel="noreferrer"> LinkedIn</a>
   </p>
 </footer>
