--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,7 +5,7 @@
   <div class="w-96">
     <h1 class="text-6xl font-bold">
       Hello, world! My name is <span
-        class="bg-clip-text text-transparent bg-gradient-to-r from-evenRed to-evenBlue"
+        class="bg-clip-text text-transparent bg-gradient-to-r from-celestialPink to-evenBlue"
         >Devin Jaggernauth</span
       >
     </h1>
